# fty-automatic-group-hy

./: CMakeLists.txt  Jenkinsfile
common/: CMakeLists.txt  group.cpp  message-bus.cpp  message.cpp
common/common/: commands.h  group.h  logger.h  message-bus.h  message.h  srr.h  srr_common.h
packaging/debian/: changelog  control
rest/: CMakeLists.txt
rest/conf/: 54_agroups.xml.in
rest/src/: create.cpp  create.h  edit.cpp  edit.h  group-rest.h  list.cpp  list.h  read.cpp  read.h  remove.cpp  remove.h  resolve.cpp  resolve.h
server/: CMakeLists.txt  fty-automatic-group.service.in
server/conf/: agroup.conf.in  logger.conf.in
server/src/: main.cpp
server/src/lib/: config.cpp  config.h  daemon.cpp  daemon.h  db.cpp  db.h  group.cpp  mutex.cpp  mutex.h  server.cpp  server.h  storage.cpp  storage.h  task.h
server/src/lib/jobs/: create.cpp  create.h  list.cpp  list.h  read.cpp  read.h  remove.cpp  remove.h  resolve.cpp  resolve.h  srr.cpp  srr.h  update.cpp  update.h
server/src/lib/jobs/srr/: reset.cpp  reset.h  restore.cpp  restore.h  save.cpp  save.h  utils.cpp  utils.h
server/test/: create.cpp  db.cpp  db.h  list.cpp  main.cpp  mutex.cpp  read.cpp  request.cpp  resolve.cpp  storage.cpp  test-utils.h
server/test/conf/: agroup.conf  logger.conf
